--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
             "email": "grzegorz.jamrooz@gmail.com"
         }
     ],
+    "minimum-stability": "stable",
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
@@ -21,11 +22,12 @@
         "php": ">=8.1",
         "grzegorz-jamroz/sf-api-bundle": "^0.0.1",
         "grzegorz-jamroz/entity-storage": "^0.0.4",
-        "grzegorz-jamroz/sf-api-foundation": "^6.1"
+        "grzegorz-jamroz/sf-api-foundation": "^6.1.1"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.11",
         "phpunit/phpunit": "^9.5",
-        "phpstan/phpstan": "^1.8"
+        "phpstan/phpstan": "^1.8",
+        "symfony/yaml": "^6.1"
     }
 }
