--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "minimum-stability": "stable",
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/"
+            "Ifrost\\StorageApiBundle\\Tests\\": "tests/"
         }
     },
     "autoload": {
@@ -22,7 +22,7 @@
         "php": ">=8.1",
         "grzegorz-jamroz/sf-api-bundle": "^0.0.1",
         "grzegorz-jamroz/entity-storage": "^0.0.4",
-        "grzegorz-jamroz/sf-api-foundation": "^6.1.2"
+        "grzegorz-jamroz/sf-api-foundation": "^6.1.3"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.11",
